<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pantalla_unica"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagen_de_fondo"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tituloApp"
        android:layout_width="299dp"
        android:layout_height="68dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/texto_titulo_App"
        android:textAlignment="center"
        android:textColor="@color/color_texto"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/campoFraseUno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/campoFraseUno"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/borde_texto_editable"
        android:backgroundTintMode="add"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/indicacion_Frase_uno"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="@color/color_texto"
        android:textColorHint="@color/color_texto_indicacion"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/campoFraseDos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloApp"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/campoFraseDos"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/borde_texto_editable"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/incicacion_Frase_Dos"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="@color/color_texto"
        android:textColorHint="@color/color_texto_indicacion"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/botonComparador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoFraseUno"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botonComparador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/boton_background"
        android:backgroundTintMode="add"
        android:elevation="15dp"
        android:fontFamily="@font/roboto_mono_medium"
        android:padding="5dp"
        android:text="@string/texto_Boton_Comparador"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoFraseDos" />

    <TextView
        android:id="@+id/resultadoDeLaComparacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/aref_ruqaa"
        android:textAlignment="center"
        android:textColor="@color/color_texto"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonComparador"
        app:layout_constraintVertical_bias="0.128" />
</androidx.constraintlayout.widget.ConstraintLayout>